add: basic component and service functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<p>works</p>
+<app-header></app-header>
+<div>
+  <app-search></app-search>
+  <app-dashboard></app-dashboard>
+  <app-publication></app-publication>
+</div>
