--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<div>
+    <img src="../../../../assets/unibw_logo.png" alt="unibw_logo">
+</div>
+<h2>Institut für Softwaretechnologie</h2>
+<h3>Publikationsliste</h3>
