--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,6 @@
-<p>search works!</p>
+<form>
+    <mat-form-field>
+        <textarea matInput placeholder="Suchen"></textarea>
+    </mat-form-field>
+</form>
+
