--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,8 @@
-<form>
-    <mat-form-field>
-        <textarea matInput placeholder="Suchen"></textarea>
-    </mat-form-field>
-</form>
-
+<mat-form-field class="mat-form-field">
+    <mat-label>Suchen</mat-label>
+    <input matInput type="text" [(ngModel)]="value">
+    <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field>
+  
