--- a/src/app/publication/publication.component.html
+++ b/src/app/publication/publication.component.html
@@ -1,3 +1,9 @@
 <div>
-    <mat-card>Simple Card</mat-card>
+<mat-card>
+<h2>{{ title }}</h2>
+<h3>{{ authors }}</h3>
+<p>{{ publication_date }}</p>
+<p>{{ pages }}</p>
+<button mat-button color="accent">zur Veröffentlichung</button>
+</mat-card>
 </div>
