--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,10 @@
+<mat-form-field class="mat-form-field">
+  <mat-label>Suchen</mat-label>
+  <input matInput type="text" [(ngModel)]="value" (keyup.enter)="search()" (ngModelChange)="search()">
+  <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+    <mat-icon>close</mat-icon>
+  </button>
+</mat-form-field>
 <div>
   <p>{{ maxCount }} Suchergebnisse</p>
   <br>
