--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <mat-form-field class="mat-form-field">
   <mat-label>Suchen</mat-label>
-  <input matInput type="text" [(ngModel)]="value" (keyup.enter)="search()" (ngModelChange)="search()">
+  <input matInput type="text" [(ngModel)]="value" (keyup.enter)="search()">
   <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
     <mat-icon>close</mat-icon>
   </button>
@@ -12,5 +12,4 @@
     <app-publication [node]="n"></app-publication>
   </ul>
 </div>
-<p>{{ counter }}/{{ maxCount }} Ergebnisse</p>
-<button (click)="moreResults()">mehr laden</button>
+<button *ngIf="maxCount > 0" (click)="moreResults()">mehr laden</button>
