--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,19 @@
+<div>
 <mat-form-field class="mat-form-field">
   <mat-label>Suchen</mat-label>
   <input matInput type="text" [(ngModel)]="value" (keyup.enter)="search()">
-  <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+  <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
     <mat-icon>close</mat-icon>
   </button>
 </mat-form-field>
+</div>
+<br>
 <div>
   <p>{{ maxCount }} Suchergebnisse</p>
-  <br>
   <ul *ngFor="let n of getResults()">
     <app-publication [node]="n"></app-publication>
   </ul>
 </div>
-<button *ngIf="maxCount > 0" (click)="moreResults()">mehr laden</button>
+<a>
+<button mat-stroked-button color="success" *ngIf="maxCount> 0" (click)="moreResults()">mehr laden</button>
+</a>
