--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,12 +9,12 @@ div {
     margin-top: 1.5em;
   }
   
-h2 {
-    margin-left: 25px;
-    font-size: 20pt;
+h1 {
+  text-align: center;    
+  font-size: 20pt;
 }
 
-h3 {
-    margin-left: 30px;
-    font-size: 16pt;
+.orange-borange {
+  border: 1px solid #ee7202;
 }
+
