--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,5 +3,6 @@
 </div>
 <br>
 <br>
-<h2>Institut für Softwaretechnologie</h2>
-<h3>Publikationsliste</h3>
+<div class="orange-borange">
+<h1>Institut für Softwaretechnologie - Publikationsliste</h1>
+</div>
