--- a/src/app/publication/publication.component.css
+++ b/src/app/publication/publication.component.css
@@ -1,9 +1,21 @@
 mat-card {
     max-width: 60%;
     margin: auto;
+    border: 0.1px solid lightgray;
 }
 
 .info {
   text-align: left;
-  margin: 3em;
+  margin-top: 3em;
+  margin-left: 3em;
+  margin-right: 3em;
+}
+
+.mat-stroked-button {
+  background-color: #fff;
+  color: #ee7202;
+}
+
+.center {
+  text-align: right;
 }
