--- a/src/app/publication/publication.component.html
+++ b/src/app/publication/publication.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="center">
             <a>
-                <button mat-stroked-button color="success">zur Veröffentlichung</button>
+                <button mat-stroked-button color="success" (click)="goToPublication()">zur Veröffentlichung</button>
             </a>
         </div>
     </mat-card>
