fix: search now works correctly on keyup events

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -3,7 +3,7 @@ div {
     text-align: center;
 }
 
-button {
+.more-button {
     margin-bottom: 3em;
 }
 
@@ -21,4 +21,8 @@ mat-label {
     font-size: 12pt;
     color: gray;
     text-align: center;
+}
+
+mat-form-field-underline-focused {
+    background-color: #ee7202;
 }
