--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div>
-<mat-form-field class="mat-form-field">
+<mat-form-field>
   <mat-label>Suchen</mat-label>
-  <input matInput type="text" [(ngModel)]="value" (keyup.enter)="search()">
-  <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+  <input matInput type="text" [(ngModel)]="value" (keyup.enter)="search()" (keyup.backspace)="search()">
+  <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''; search()">
     <mat-icon>close</mat-icon>
   </button>
 </mat-form-field>
@@ -15,5 +15,5 @@
   </ul>
 </div>
 <a>
-<button mat-stroked-button color="success" *ngIf="maxCount> 0" (click)="moreResults()">mehr laden</button>
+<button mat-stroked-button color="success" class="more-button" *ngIf="maxCount> 0" (click)="moreResults()">mehr laden</button>
 </a>
